fix card rotation on mobile

--- a/main.css
+++ b/main.css
@@ -279,6 +279,10 @@ body {
     transform: rotateY(180deg);
 }
 
+.project-card:active .project-card-inner {
+    transform: rotateY(180deg);
+}
+
 .project-card-front, .project-card-back {
     position: absolute;
     width: 100%;
